# Hotel-Review-Analysis-Based-on-Large-Language-Models

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.example.json
docs/: 使用說明.md  第五章_第六章_結論與限制.docx  第四章_研究結果.docx  第四章_研究結果.md  論文計劃書.docx
src/hotel_ipa/: config_loader.py  constants.py  utils.py
src/hotel_ipa/analysis/: base.py  gpt_4o.py  gpt_4o_mini.py  gpt_4o_mini_ipa.py
src/hotel_ipa/classification/: classify.py
src/hotel_ipa/importance/: post_hoc.py
src/hotel_ipa/preparation/: sequence.py
src/hotel_ipa/stats/: ipa_priority_tests.py  statistical_tests.py
src/hotel_ipa/swot/: swot_detector.py  swot_engine.py
src/hotel_ipa/validation/: cross_model.py  stability.py  test_prompt.py
src/hotel_ipa/visualization/: ai_advisor.py  charts.py  html_dashboard.py  ipa_dashboard.py  swot_visualization.py
