[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-ipa"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "openai",
    "anthropic",
    "matplotlib",
    "seaborn",
    "scipy",
    "numpy",
    "tqdm",
    "tenacity",
    "tabulate",
]

[tool.setuptools.packages.find]
where = ["src"]
